Fri Jun  9 19:34:23 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Fri May 26 20:20:29 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for building shared libraries.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.

Fri Mar 17 19:46:49 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Zap duplicate.

Tue Mar 7 21:40:18 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: changed library name for the PC.

Tue Mar  7 19:55:14 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_DEFS.

Thu Mar 2 11:50:00 1995 Keith Vetter (keithv@fusion.com)

	* ktf_util.c: Changed NEED_WINSOCK_H to NEED_SOCKETS

Wed Mar 1 16:30:00 1995 Keith Vetter (keithv@fusion.com)

	* ktf_util.c: fixed up some 16 vs 32 bit conversions.

Tue Feb 28 01:01:15 1995  John Gilmore  (gnu at toad.com)

	* *.c:  Avoid <krb5/...> includes.

Wed Feb 22 01:27:05 1995 Keith Vetter (keithv@fusion.com)

        * Makefile.in: made to work on the PC
        * *.c, ktfile.h: added windows INTERFACE keyword
	* ktf_util.c: removed include of <netinet/in.h>
           cast some 32bit ints to size_t ints

Fri Feb  3 01:53:44 1995  John Gilmore  <gnu@cygnus.com>

	Rename files for DOS 8.3 uniqueness:
	* ktf_get_en.c => ktf_g_ent.c
	* ktf_get_na.c => ktf_g_name.c
	* Makefile.in:  changed to match.

Fri Jan 27 12:54:54 1995  Chris Provenzano (proven@mit.edu)

	* ktf_get_en.c, ktfile.h (krb5_ktfile_get_entry()) Added 
		krb5_keytype arg.

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h
	* ktf_util.c : Use a constant size for file data not subfield
		size from krb5_keytab_entry

Fri Nov 18 15:34:35 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktf_util.c (krb5_ktfileint_internal_read_entry): Add magic