@@ -1,3 +1,9 @@
+Wed Jun 28 12:05:34 1995    <tytso@rsx-11.mit.edu>
+
+	* ktf_g_ent.c (krb5_ktfile_get_entry): If the key version number
+		is specified, check to make sure that the entry has the
+		correct key version number.
+
 Fri Jun  9 19:34:23 1995    <tytso@rsx-11.mit.edu>
 
 	* configure.in: Remove standardized set of autoconf macros, which
